--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,5 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
+          description: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/sitegen27:latest
