--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,9 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags:
-            - ${{ vars.DOCKERHUB_USERNAME }}/sitegen27:latest
-            - ${{ vars.DOCKERHUB_USERNAME }}/sitegen27:1.0
+          tags: |
+            ${{ vars.DOCKERHUB_USERNAME }}/sitegen27:latest
+            ${{ vars.DOCKERHUB_USERNAME }}/sitegen27:1.0
       -
         uses: actions/checkout@v4
       -
